CDAP-5751: Give more perm gen space to SparkPageRankApp driver